--- a/notebooks/compare_countries.ipynb
+++ b/notebooks/compare_countries.ipynb
@@ -232,6 +232,17 @@
     "plt.tight_layout()\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4add68ec",
+   "metadata": {},
+   "source": [
+    "- **Benin** shows the most variability in GHI, while **Liberia** is the most stable.\n",
+    "- **Ghana** demonstrates the strongest GHI on average, with high outliers in DNI.\n",
+    "- Panel cleaning has a clearly positive effect on solar panel performance.\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
